--- a/Readme
+++ b/Readme
@@ -1,3 +1,6 @@
-Data Science Experiments with Python
-This repository contains a collection of data science experiments using Python. The experiments cover a wide range of data analysis, machine learning, and data visualization techniques.
+🛠️ Setup:
+1) Clone the repository 📂:
+git clone https://github.com/Shourya53028/PRODIGY-INFOTECH.git
 
+2) Install required packages 📦:
+pip install -r requirements.txt
